# siro-ai-robot

./: .gitignore  AnimationCreator.py  KokoroAudioCreator.py  README.md  frozen-requirements.txt  pyproject.toml
charro_negro/: Algorithm.py  ComponentNameDefinition.py  SequenceNameDefinition.py  config.json  main.py
charro_negro/sequences/: FinAcepta.py  TestSequence.py  __init__.py
darth_vader/: SequenceNameDefinition.py  config.json  main.py
darth_vader/sequences/: AttackSequence.py  TestSequence.py  __init__.py
docs/: arquitectura.html  controladores.html  estilos.css  herramientas.html  herramientas.txt  index.html  modulos.html  tutorial-robot.html
robots/charro_negro/: ComponentNameDefinition.py  SequenceNameDefinition.py  config.json  main.py
robots/charro_negro/sequences/: Ademan_1.py  Ademan_2.py  Descanso.py  Desliza.py  Extiende.py  FinRechaza.py  (+4 more)
robots/darth_vader/: ComponentNameDefinition.py  SequenceNameDefinition.py  config.json  main.py
test/: SampleTestAnimationSuite.py  TestAIGenerator.py  TestAdafruitController.py  TestDefaultMoveSequencer.py  TestDialogueDirector.py  TestFakeYouSynthetizer.py  TestKokoroSynthetizer.py  TestKokoroSynthetizerWithFilter.py  TestSequencer.py  TestSequencerWithAudio.py  TestServoSequencer.py  TestSimpleAudioPlayer.py  TestVoskRecognition.py  TestWaveCreator.py
tools/: AnimationCreator.py  AnimationCreatorConfig.py  ControlerTester.py  ControllerTester.py  ControllerTesterConfig.py  ControllerTesterLauncher.py  Dephaser.py  SampleServosDefinition.py  VirtualRobotController.py  VirtualRobotSimulator.py
(+66 files in other folders)
